@@ -1,6 +1,8 @@
 ---
 fixtures:
   repositories:
+    compliance_markup: https://github.com/simp/pupmod-simp-compliance_markup
+    simp_options: https://github.com/simp/pupmod-simp-simp_options
     simplib: https://github.com/simp/pupmod-simp-simplib
     stdlib: https://github.com/simp/puppetlabs-stdlib
   symlinks:
