@@ -1,11 +1,6 @@
 ---
-logrotate::rotate_period: 'weekly'
-logrotate::rotate: 4
-
 compliance_markup::validate_profiles:
-  - 'disa_stig'
-  - 'nist_800_53'
-  - 'nist_800_53_rev4'
+  - "%{facts.target_compliance_profile}"
 
 # Needed for catalog inspection to ensure valid data
 compliance_markup::report_on_client: true
@@ -18,6 +13,12 @@ compliance_markup::report_types:
 # Ideally, this would be the same as the validation array but you may want to
 # do something different based on your test requirements
 compliance_markup::enforcement:
-  - 'disa_stig'
-  - 'nist_800_53'
-  - 'nist_800_53_rev4'
+  - "%{facts.target_compliance_profile}"
+
+# Required Parameters
+
+# The following from `simp_options` should not be required
+simp_options::puppet::server: 'puppet.foo.bar'
+simp_options::puppet::ca: 'puppet.foo.bar'
+simp_options::dns::servers :
+  - 1.2.3.4
